--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -1,3 +1,34 @@
+.navbar {
+  background-color: whitesmoke;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.navbar .logo-text-skyblue {
+  color: #c2d1dc;
+}
+.navbar .nav-info-text {
+  font-size: 12px;
+}
+.navbar .nav-info-text.nav-info-text-name {
+  font-size: 17px;
+}
+.navbar .nav-info-icons-wrapper {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.navbar .navbar-nav {
+  margin: auto;
+}
+.navbar .navbar-nav .nav-link {
+  padding: 19px 18px;
+  margin: 0 6px;
+  font-size: 16px;
+}
+.navbar .navbar-nav .nav-link.active {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
+}
+
 body {
   padding: 0;
   background-color: #bfd1de;
