collapse, 코로나 현황 패널 추가

--- a/src/main/webapp/resources/scss/app.scss
+++ b/src/main/webapp/resources/scss/app.scss
@@ -1,6 +1,17 @@
 @import "app/nav";
+@import "app/home";
+@import "app/toggle";
 
 body {
 	padding: 0;
-	background-color: rgb(191,209,222);
+	background-color: rgba(191,209,222,0.8);
+	.body-wrapper{
+		margin-left:60px;
+		margin-right: 60px;
+		
+	}
+	
+	.rotated180{
+		transform: rotate(180deg);
+	}
 }
