--- a/src/main/webapp/resources/scss/app.scss
+++ b/src/main/webapp/resources/scss/app.scss
@@ -12,9 +12,11 @@
 	--white-color:#F5F5F5;
 	--truewhite-color:#ffffff;
 	--skyblue-color:#C2D1DC;
+	--blue-color:#2196F3;
 	--pink-color:#eb5374;
 	
 	  /* Font Size */
+	--font-xxlarge:40px;
 	--font-xlarge:30px;
 	--font-large: 20px;
 	--font-regular: 16px;
