--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -293,8 +293,32 @@ input:checked + .slider:before {
   padding-top: 30px;
   list-style: none;
 }
-.loginfindAndjoin .li {
+.loginfindAndjoin li {
   padding-right: 8px;
+}
+
+.search-main {
+  margin-top: 80px;
+}
+.search-main .map {
+  background-color: var(--white-color);
+  padding: 30px;
+  border-radius: 25px;
+}
+.search-main .hospital-list {
+  margin-right: 15px;
+  background-color: var(--white-color);
+  padding: 30px;
+  border-radius: 25px;
+}
+.search-main .hospital-list .list-group-item {
+  margin-bottom: 25px;
+  border-radius: 25px;
+  background-color: rgba(194, 209, 220, 0.2);
+  border: none;
+}
+.search-main .hospital-list .list-group-item.active {
+  background-color: var(--blue-color);
 }
 
 :root {
