model-> user, role, userDto, getter/setter-> @Data(lombok) change, vaccine.jsp retouching

--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -350,6 +350,49 @@ input:checked + .slider:before {
   display: none;
 }
 
+.vaccine-main {
+  margin-top: 80px;
+}
+.vaccine-main .summary-left-panel {
+  backgorund-color: var(--white-color);
+  padding: 17px;
+  border-radius: 25px;
+}
+.vaccine-main .summary-left-panel .card {
+  border: none;
+  background-color: var(--white-color);
+}
+.vaccine-main .summary-left-panel .card .card-header {
+  background-color: rgba(0, 0, 0, 0);
+  padding: 0;
+  margin: 0.75rem 1.25rem;
+  padding-bottom: 0.6rem;
+}
+.vaccine-main .summary-left-panel .card .card-header .panel-title {
+  display: block;
+  text-align: center;
+}
+.vaccine-main .summary-left-panel .card .card-header .panel-title .card-header-title {
+  font-weight: bold;
+  color: var(--grey-dark-color);
+}
+.vaccine-main .vaccine-info-count-wrapper {
+  background-color: whitesmoke;
+  border-radius: 25px;
+  text-align: center;
+  padding: 40px;
+  margin-top: 20px;
+}
+.vaccine-main .vaccine-info-count-wrapper .vaccine-into-chart-title {
+  color: block;
+  font-size: 15px;
+  font-weight: bold;
+}
+.vaccine-main .vaccine-info-graph-wrapper {
+  background-color: whitesmoke;
+  border-radius: 25px;
+}
+
 :root {
   /*Color*/
   --grey-color:#5C6366;
