--- a/src/main/webapp/resources/scss/app/_home.scss
+++ b/src/main/webapp/resources/scss/app/_home.scss
@@ -15,6 +15,15 @@
 				
 				.card-header {
 				    border-bottom: 1px solid var(--grey-light-color);
+				    
+				    .panel-title {
+				    	display : flex;
+				    	justify-content : space-between;
+				    	
+				    	.arrow-icon {
+				    		transform : rotate(180deg);
+				    	}
+				    }
 				}
 				
 			}
