--- a/src/main/webapp/resources/scss/app/_home.scss
+++ b/src/main/webapp/resources/scss/app/_home.scss
@@ -142,6 +142,13 @@
 			font-size : 15px;
 			font-weight : bold;
 		}
+		
+		.chartdiv {
+			width: 80%;
+		    margin: auto;
+		    height: 300px;
+		}
+		
 		.piediv {
 			width : 100%;
 			height : 200px;
