--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -2,7 +2,7 @@
   background-color: whitesmoke;
   padding-top: 0;
   padding-bottom: 0;
-}
+}	
 .navbar .navbar-brand {
   padding-left: 15px;
   font-weight: bold;
@@ -505,18 +505,47 @@ input:checked + .slider:before {
 .vaccine-main .vaccine-chart-count-wrapper .vaccine-chart-count-title {
   color: black;
   font-size: var(--font-large);
+  font-weight: bold;
 }
 .vaccine-main .vaccine-chart-count-wrapper .vaccineAllChart {
   width: 100%;
   height: 350px;
 }
 .vaccine-main .summary-right-pane {
-  background-color: whitesmoke;
   border-radius: 25px;
   height: 150px;
-  display: flex;
+  position: relative;
   justify-content: center;
+  display: flex;
 }
+.vaccine-main .summary-right-pane .vaccine-percent-chart {
+  margin: auto;
+}
+.vaccine-main .summary-right-pane .vaccine-percent-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  font-size: var(--font-large);
+  transform: translate(-42%, -10%);
+  color: black;
+}
+.vaccine-main .summary-right-pane .vaccine-complete-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  font-size: var(--font-regular);
+  font-weight: bold;
+  transform: translate(-50%, -125%);
+}
+.vaccine-main .summary-right-pane .vaccine-percent-text:after {
+  content: "%";
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
 @font-face {
   font-family: "GowunDodum-Regular";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunDodum-Regular.woff") format("woff");
