--- a/src/main/webapp/resources/scss/app/_list.scss
+++ b/src/main/webapp/resources/scss/app/_list.scss
@@ -1,19 +1,101 @@
 .qna-card-wrapper{
-	margin-top:80px;
+ 	margin-top:80px;
+ 	margin-left:120px;
+ 	padding-top:55px;
+ 	border-radius:25px;
 	background-color: var(--white-color);
-	.dropdown{
+	.qna-card-title{
+		font-size: var(--font-xlarge);
+		margin-left: 542px;
+		margin-right: 536px;
+		padding-left: 5px;
+		border-bottom: 2px solid rgb(92,99,102);
+	}
+	.qna-card-dropdown{
+		margin-left:823px;
 		display:flex;
 		width:30%;
-		.btn{
-			margin-right:17px;
+		.form-select{
+			padding-left: 5px;
+			padding-right: 12px;
+			margin-right:15px;
 			background-color: var(--truewhite-color);
 			color: var(--grey-dark-color);
-			border-style: none;
+			border-style:none;
+			border-radius: 5px;
 		}
 		.input-group{
 			.input-group-text{
 				background:none;
 			}
 		}
+	}
+	.qna-card-head{
+		background-color: var(--grey-color);
+		border-radius:5px;
+		color: var(--white-color);
+		font-size: var(--regular-font);
+		width:95%;
+		margin:auto;
+		margin-top:15px;
+		padding-top:20px;
+		padding-bottom:20px;
+		.qna-head-number{
+			margin-left:40px;
+		}
+		.qna-head-title{
+			margin-left:350px;
+			margin-right:70px;
+		}
+		.qna-head-writer{
+			margin-left:270px;
+		}
+		.qna-head-date{
+			margin-left:60px;
+		}
+		.qna-head-hits{
+			margin-left: 60px;
+		}
+	}
+	.qna-card-list{
+		display:flex;
+		background-color: var(--truewhite-color);
+		list-style: none;
+		width:95%;
+		margin-top:15px;
+		margin-left:29px;
+		padding-top:20px;
+		padding-bottom: 20px;
+		border-radius:5px;
+		.qna-list-number{
+			margin-left:50px;
+		}
+		.qna-list-title{
+			margin-left:160px;
+		}
+		.qna-list-writer{
+			margin-left:270px;
+		}
+		.qna-list-date{
+			margin-left:60px;
+		}
+		.qna-list-hits{
+			margin-left: 60px;
+		}
+	}
+	.btn{
+		background-color: var(--truewhite-color);
+		color: var(--grey-dark-color);
+		border-style:none;
+		margin-top:20px;
+		margin-left:1055px;
+		padding-top:6px;
+		padding-bottom:6px;
+		padding-left:16px;
+		padding-right:16px;
+	}
+	.pagination{
+		margin-top:18px;
+		margin-left:500px;
 	}
 }
