--- a/src/main/webapp/resources/scss/app/_search.scss
+++ b/src/main/webapp/resources/scss/app/_search.scss
@@ -7,7 +7,9 @@
 		border-radius: 25px;
 	}
 	.form-control{
-		margin-top: 20px;
+		background-color: var(--truewhite-color);
+		border:none;
+		border-radius: 0 !important;
 		.search-icon{
 			position: absolute;
 			right:30px;
@@ -17,7 +19,7 @@
 		padding-top:25px;
 		padding-bottom: 30px;
 		padding-left: 20px;
-		padding-right: 20px;
+		padding-right: 8px;
 		margin-top:50px;
 		margin-right: 80px;
 		background-color: var(--white-color);
@@ -26,16 +28,20 @@
 				color: var(--grey-dark-color);
 			}
 			.input-group{
-				margin-top:2px;
+				margin-top:15px;
 				.input-group-text{
 					background:none;
-					margin-top:20px;
+					background-color: var(--truewhite-color);
+					margin-right: 37px;
 				}
 			}
 			.list-group {
 				max-height: 500px;
 				overflow-y: scroll;
 				margin-top: 20px;
+				.covid-hospital-list-wrapper{
+					margin-right:20px;
+				}
 				
 				.list-group-item{
 					padding-top:10px; 
