fixed untracked files

--- a/src/main/webapp/resources/scss/app/_vaccine.scss
+++ b/src/main/webapp/resources/scss/app/_vaccine.scss
@@ -98,6 +98,17 @@
 			}
 	}
 	
+	.vaccine-info-wrapper {
+		background-color:var(--white-color);
+		border-radius : 25px;
+		text-align : center;
+		padding : 30px;
+		margin-top : 20px;
+		
+		height : 500px;
+		
+	}
+	
 	.summary-right-pane {
 		
 		border-radius : 25px;
