--- a/src/main/webapp/resources/scss/app.scss
+++ b/src/main/webapp/resources/scss/app.scss
@@ -5,7 +5,7 @@
 @import "app/chart";
 @import "app/search";
 @import "app/authjoin";
-@import "app/list";
+@import "app/qna";
 @import "app/vaccine";
 @font-face {
     font-family: 'GowunDodum-Regular';
