--- a/src/main/webapp/resources/scss/app/_search.scss
+++ b/src/main/webapp/resources/scss/app/_search.scss
@@ -30,6 +30,7 @@
 			.input-group{
 				margin-top:15px;
 				.input-group-text{
+					border-radius: 0px;
 					background:none;
 					background-color: var(--truewhite-color);
 					margin-right: 37px;
