--- a/src/main/webapp/resources/scss/app/_home.scss
+++ b/src/main/webapp/resources/scss/app/_home.scss
@@ -40,7 +40,7 @@
 					.card-header-title{
 						font-weight: bold;
 						color: var(--grey-dark-color);
-						.panel-tilte-icon{
+						.panel-title-icon{
 							color: var(--grey-dark-color);
 						}
 					}
