--- a/src/main/webapp/resources/scss/app/_auth.scss
+++ b/src/main/webapp/resources/scss/app/_auth.scss
@@ -19,7 +19,7 @@
 		.login-input-wrapper{
 			padding-left:30px;
 			padding-right:30px;
-			margin-top:30px;
+			margin: 34px 0px;
 			.form-group{
 				.login-title{
 					font-size: var(--font-large);
@@ -32,8 +32,7 @@
 			}
 			.btn{
 				width:100%;
-				margin-top:15px;
-				margin-bottom:35px;
+			    margin: 15px 0;
 			}
 		}
 	}
@@ -42,6 +41,7 @@
 	display:flex;
 	justify-content: center;
 	padding-top:30px;
+	padding-left:0;
 	list-style: none;
 	li{
 		padding-right: 8px;
