--- a/src/main/webapp/resources/scss/app.scss
+++ b/src/main/webapp/resources/scss/app.scss
@@ -23,9 +23,9 @@
 	--white-color:#F5F5F5;
 	--truewhite-color:#ffffff;
 	--skyblue-color:#C2D1DC;
-	--blue-color:#2196F3;
+	--blue-color:#00A3FF;
 	--pink-color:#eb5374;
-	--logo-color:#8FB2BF;
+	--logo-color:#86B1CC;
 	
 	
 	
