--- a/src/main/webapp/resources/scss/app/_qna.scss
+++ b/src/main/webapp/resources/scss/app/_qna.scss
@@ -40,7 +40,7 @@
 		}
 	}
 	.qna-card-head{
-		background-color: var(--grey-color);
+		background-color: #95A4AE;
 		border-radius:5px;
 		color: var(--white-color);
 		font-size: var(--regular-font);
@@ -97,8 +97,8 @@
 		}
 	}
 	.btn{
-		background-color: var(--skyblue-color);
-		color: var(--grey-dark-color);
+		background-color: #95A4AE;
+		color: var(--white-color);
 		border-style:none;
 		margin-top:20px;
 		margin-left:1043px;
@@ -113,6 +113,23 @@
 		
 	}
 }
-.btn{
-	
+.new-card-wrapper{
+ 	margin-top:60px;
+ 	margin-left:120px;
+ 	padding-top:50px;
+ 	border-radius:25px;
+	background-color: var(--white-color);
+	.new-card-title{
+		font-size: var(--font-xlarge);
+		margin-left: 555px;
+		margin-right: 526px;
+		padding-left: 5px;
+		border-bottom: 2px solid rgb(92,99,102);
+	}
+	.input-group{
+		margin-top:40px;
+		.form-control-title{
+			padding-top:40px;
+		}
+	}
 }
