--- a/src/main/webapp/resources/scss/app/_vaccine.scss
+++ b/src/main/webapp/resources/scss/app/_vaccine.scss
@@ -77,24 +77,46 @@
 		}
 	}
 	
+	.location-percentage-info-wrapper {
+		background-color : var(--white-color);
+		border-radius : 25px;
+		padding : 30px;
+		margin-top : 20px;
+		height : 500px;
+		text-align : center;
+		
+		.location-percentage-info-title {
+			
+			color : black;
+			font-weight : bold;
+			font-size : var(--font-regular);
+		}
+		.locationChart {
+			width : 100%;
+			height : 350px;
+			margin-top:50px;
+		}
+	}
+	
 	.vaccine-chart-count-wrapper {
 		background-color:var(--white-color);
 		border-radius : 25px;
 		text-align : center;
 		padding : 30px;
 		margin-top : 20px;
-		
+			
 		height : 500px;
 		
 		.vaccine-chart-count-title {
 			color : black;
-			font-size : var(--font-large);
+			font-size : var(--font-regular);
 			font-weight:bold;
 
 		}
 		.vaccineAllChart {
 				width : 100%;
 				height : 350px;
+				margin-top:50px;
 			}
 	}
 	
@@ -103,9 +125,29 @@
 		border-radius : 25px;
 		text-align : center;
 		padding : 30px;
-		margin-top : 20px;
-		
+		margin-top : 20px;	
 		height : 500px;
+		
+		.vaccine-info-nav {
+			background-color : #d3d3d3;
+			border-radius : 20px;
+			
+			.vaccine-info-link-color {
+	
+    			color: black;
+    			
+    			&:hover {
+    				border-style:hidden;
+    			}
+    			
+    			&.active{
+					font-weight : bold;
+					border-radius : 20px;
+				}
+				
+			}
+			
+		}
 		
 	}
 	
@@ -148,6 +190,22 @@
 	
 
 }
+
+.table-borderless {
+	margin-top : 30px;
+	background-color : white;
+	border-radius : 25px;
+}
+
+.table-borderless td{
+   	border : none;
+   	width : 50%;	
+}
+
+.td-text-left {
+	text-align : left;
+}
+
 
 canvas {
 	width:100%;
